k8s/data-science-image-app.yaml
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datascienceimage-deployment
  labels:
    app: datascienceimage
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: datascienceimage
  template:
    metadata:
      labels:
        app: datascienceimage
    spec:
      containers:
      - name: datascienceimage
        image: 439223726434.dkr.ecr.us-east-1.amazonaws.com/data-sceince-image-search-cars:14
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: datascienceimage-service
spec:
  selector:
    app: datascienceimage
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001
---
